12/ Slightly improved static method GetWeapon in LootBoxBase.
13/ Removed Overcharged Orb.
14/ Removed Forbidden Tome.
15/ Merged Skill Engine with Energy Absorption perk.
16/ Removed ChaosShield and made it into a perk.
17/ Removed Stealth cloak.
18/ Buff Invisibility by adding effect from "Stealth cloak".
19/ Removed Golden Cross and changed it into a potion called Holy Potion.
20/ Merged Chaos Tablet with Chaos Protection perk.
21/ Changed some of the name of reic prefix.
22/ Removed Fool's Aura perk cause it is not practical
23/ Adjusted Commander's Elixir, reduce amount of minion given from 5 -> 2, it now gives 2 max sentry
24/ Code clean up.
25/ Fixed "IsAGhostNPC" variable not working as intended.
26/ Removed Legacy Boss Rush mode and anything that related that can't be reused.
27/ Merged Roguelike Mode with World gen test config.
28/ Removed massive StaticNoise png and using 255x255 one instead.
29/ Small fixes toward boss rush mode missing exotic teleporter.
30/ Fixed localization error.
31/ Removed unused mechanic, dying in classic mode no longer drop boss spawner again.
32/ Removed Enchantment config from luck department.
33/ Removed Curses system.
34/ Basic implementation of relic set system.
35/ Removed Trinket Spoil and Lost Acc from spoil.
36/ Removed Trinket and Lost Acc lib in ModItemLib.
37/ Removed RPG altar, RPG field and any mention of RPG.
38/ Removed Overpowering Gem and made it into a relic set.
39/ Removed Fury Emblem and made it into a artifact instead.
40/ Removed Titan Blood and made it into a relic set.
41/ Removed Divinity Stone and Blood stone, merged them into Nature of Good and Evil and turn it into a relic set.
42/ Removed BloodThorn core acc and turn it into a perk.
43/ Reverted Nature Crystal back to normal acc item and give the item old effects.
44/ Added Heart Of Nature relic set.
45/ Adjusted HP condition for when KS created a crown from 40% to 67%.
46/ Massively increases bosses base HP.