@@ -9,9 +9,6 @@ namespace Roguelike.Contents.Items.Consumable.Spawner {
 		public override void SpecialSpawningLogic(Player player) {
 			int spawnY = 250;
 			NPC MainNPC = NPC.NewNPCDirect(player.GetSource_ItemUse(Item), (int)player.Center.X, (int)(player.Center.Y - spawnY), NPCtypeToSpawn[0]);
-			NPC npc = NPC.NewNPCDirect(player.GetSource_ItemUse(Item), (int)player.Center.X + Main.rand.Next(-100, 100), (int)(player.Center.Y - spawnY + Main.rand.Next(-100, 100)), NPCtypeToSpawn[0]);
-			npc.GetGlobalNPC<RoguelikeGlobalNPC>().BelongToWho = MainNPC.whoAmI;
-			npc.GetGlobalNPC<RoguelikeGlobalNPC>().IsAGhostEnemy = true;
 		}
 	}
 }
