@@ -1,17 +1,0 @@
-﻿using Terraria;
-using Terraria.ModLoader;
-using Terraria.ID;
-
-namespace Roguelike.Contents.Items.Consumable.Spawner
-{
-	class PlanteraEssence : ModItem {
-		public override void SetDefaults() {
-			Item.height = 30;
-			Item.width = 30;
-			Item.material = true;
-			Item.rare = ItemRarityID.LightPurple;
-			Item.value = 0;
-			Item.maxStack = 999;
-		}
-	}
-}
