@@ -1,12 +1,6 @@
-﻿using Roguelike.Common.Utils;
-using Roguelike.Contents.Items.Accessories.LostAccessories;
-using System;
-using System.Collections.Generic;
-using System.Linq;
-using System.Text;
-using System.Threading.Tasks;
-using Terraria;
+﻿using Terraria;
 using Terraria.ModLoader;
+using Roguelike.Common.Utils;
 
 namespace Roguelike.Contents.Items.RelicItem.RelicSetContent;
 public class HeartOfNature_ModPlayer : ModPlayer {
