@@ -753,17 +753,6 @@ UntappedPotential: {
 		'''
 }
 
-LegendaryWoodSword: {
-	DisplayName: Legendary Wood Sword
-	Description:
-		'''
-		"Wood sword are strengthen"
-		+ Increases base damage by 20
-		+ Weapon size increases by 50%
-		+ After every 3 swing, throw out wood that deal 200% of weapon damage
-		'''
-}
-
 GlassCannon: {
 	DisplayName: Glass cannon
 	Description:
@@ -848,7 +837,7 @@ BloodthornCore: {
 		'''
 		"A thorn in heart"
 		Upon hit, Burst out 6 blood thorn that deal 45 magic damage
-		Blood thorn that is created by this item have life steal effect
+		Blood thorn that is created by this perk have life steal effect
 		Increases healing effective by 15% and maximum life by 15
 		'''
 }
